# learn_c_bazel

./: .bazelrc  .clang-format  .gitignore  BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  compile_commands.json  sys_repo.bzl
bazel/: BUILD.bazel  MODULE.bazel  cc_toolchain_config.bzl  copts.bzl  defs.bzl  pkg_config.bzl
bazel_buildframe/: MODULE.bazel  copts.bzl  pkg_config.BUILD.tpl  pkg_config.bzl  tool.bzl
buildframe/: BUILD.bazel  MODULE.bazel  defs.bzl
data/: BUILD  create_tbl_req.json
scripts/: build.sh  clean.sh  generate_compile_commands.py  generate_compile_db.sh  rebuild.sh  run_ut.sh  termux_build.sh  termux_run_ut.sh
src/app/: BUILD  BUILD.bazel  main.c  main.cc
src/iceberg_to_sql/: BUILD  BUILD.bazel  iceberg_to_sql.cc  iceberg_to_sql.h
src/include/: BUILD  BUILD.bazel  common_util.h
src/io_uring_demo/: BUILD  BUILD.bazel  io_uring_demo.cc  io_uring_demo.h
src/leetcode_train/: BUILD.bazel  leetcode_train.cc  leetcode_train.h
src/leetcode_train/leetcode_app/: 146_lru_cache.cc  460_lfu_cache.cc  621_least_interval.cc  BUILD.bazel  leetcode_app.h
src/leetcode_train/leetcode_array/: 152_max_product.cc  27_remove_element.cc  287_find_duplicate.cc  33_search.cc  34_search_range.cc  53_max_sub_array.cc  704_search.cc  977_sorted_squares.cc  BUILD.bazel  leetcode_array.h
src/leetcode_train/leetcode_backtrack/: 39_combination_sum.cc  40_combination_sum_2.cc  46_permute.cc  47_permute_unique.cc  77_combine.cc  BUILD.bazel  leetcode_backtrack.h
src/leetcode_train/leetcode_binary_tree/: 101_is_symmetric.cc  102_level_order.cc  104_max_depth.cc  105_bulid_tree.cc  114_flatten.cc  226_invert_tree.cc  236_lowest_common_ancestor.cc  617_merge_trees.cc  94_in_order_traversal.cc  96_num_trees.cc  98_is_valid_bst.cc  BUILD.bazel  leetcode_binary_tree.h
src/leetcode_train/leetcode_linked_list/: 141_has_cycle.cc  142_detect_cycle.cc  148_sort_list.cc  160_get_intersection_node.cc  19_remove_nth_from_end.cc  206_reverse_list.cc  21_merge_two_lists.cc  234_is_palindrome.cc  23_merge_k_lists.cc  BUILD.bazel  leetcode_linked_list.cc  leetcode_linked_list.h
src/leetcode_train/leetcode_stack_queue/: 20_is_valid.cc  BUILD.bazel  leetcode_stack_queue.h
src/leetcode_train/leetcode_two_pointer/: 15_three_sum.cc  3_length_of_longest_sub_str.cc  BUILD.bazel  leetcode_two_pointer.h
src/leetcode_train/leetcode_util/: BUILD.bazel  my_hash_tbl.h  my_linked_list.h  uthash.h
src/linux_os_util/: BUILD.bazel  inotify_test.cc  linux_os_util.h
src/module/: BUILD  my_module.cc  my_module.h
src/pg_client/: BUILD  BUILD.bazel  pg_client.cc  pg_client.h
src/rest_demo/: BUILD  rest_server.cc  rest_server.h
ut/: BUILD  BUILD.bazel  main_test.cc  ut_main.cc
ut/iceberg_to_sql_ut/: BUILD  BUILD.bazel  iceberg_to_sql_ut.cc
ut/leetcode_train_ut/: BUILD.bazel  leetcode_app_ut.cc  leetcode_array_ut.cc  leetcode_backtrack_ut.cc  leetcode_linked_list_ut.cc  leetcode_train_ut.cc  leetcode_two_pointer_ut.cc
ut/rest_server_ut/: BUILD  rest_server_ut.cc
