module(
    name = "mqsim_bazel",
    version = "0.0.1",
)

"""extern module dependencies"""
# The `repo_name` attribute allows users to reference this dependency via the `com_glog` repo name.
bazel_dep(name = "glog", version = "0.7.1", repo_name = "com_glog")
bazel_dep(name = "googletest", version = "1.16.0", repo_name = "com_googletest")
bazel_dep(name = "google_benchmark", version = "1.9.1", repo_name = "com_google_benchmark")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)
