load("@local_bazel_buildframe//:copts.bzl", "GLOBAL_DEFAULT_COPTS", "GLOBAL_DEFAULT_LINK_OPTS")
load("@rules_cc//cc:defs.bzl", "cc_test")

package(
    default_visibility = ["//visibility:private"],
)

cc_test(
    name = "ut_main",
    size = "small",
    srcs = ["ut_main.cc"],
    copts = GLOBAL_DEFAULT_COPTS,
    linkopts = GLOBAL_DEFAULT_LINK_OPTS,
    visibility = ["//visibility:public"],
    deps = [
        "//ut/iceberg_to_sql_ut",
    ],
)
