load("@local_bazel_buildframe//:copts.bzl", "GLOBAL_DEFAULT_COPTS", "GLOBAL_DEFAULT_LINK_OPTS")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

cc_binary(
    name = "MQSim",
    srcs = [
        "main.cc"
    ],
    deps = [
        "//src/pg_client:pg_client",
    ],
    copts = GLOBAL_DEFAULT_COPTS,
    linkopts = GLOBAL_DEFAULT_LINK_OPTS,
    linkstatic = True,
)
