load("@local_bazel_buildframe//:copts.bzl", "GLOBAL_DEFAULT_COPTS", "GLOBAL_DEFAULT_LINK_OPTS")
load("@rules_cc//cc:defs.bzl", "cc_binary")

package(
    default_visibility = ["//visibility:private"],
)

cc_binary(
    name = "main",
    srcs = [
        "main.cc",
    ],
    copts = GLOBAL_DEFAULT_COPTS,
    linkopts = GLOBAL_DEFAULT_LINK_OPTS,
    visibility = ["//visibility:public"],
    deps = [
        "//src/pg_client",
    ],
)
