load("@local_bazel_buildframe//:copts.bzl", "GLOBAL_DEFAULT_COPTS")
load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//visibility:private"],
)

cc_library(
    name = "iceberg_to_sql",
    srcs = glob([
        "*.cc",
    ]),
    hdrs = [
        "iceberg_to_sql.h",
    ],
    copts = GLOBAL_DEFAULT_COPTS,
    includes = [
        ".",
    ],
    linkopts = [],
    visibility = ["//visibility:public"],
    deps = [
        "//src/include:inner_include",
        "//src/pg_client",
        "@com_cjson//:cjson",
        "@com_glog//:glog",
    ],
)
