load("@local_bazel_buildframe//:copts.bzl", "GLOBAL_DEFAULT_COPTS")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
package(default_visibility = ["//visibility:public"])

cc_library(
    name = "inner_include",
    srcs = [],
    hdrs = [
        "common_util.h",
    ],
    includes = [
        ".",
    ],
    deps = [],
    copts = GLOBAL_DEFAULT_COPTS,
    linkopts = [],
)