load("@local_bazel_buildframe//:copts.bzl", "GLOBAL_DEFAULT_COPTS")
load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "iceberg_to_sql_ut",
    srcs = [
        "iceberg_to_sql_ut.cc",
    ],
    copts = GLOBAL_DEFAULT_COPTS,
    data = [
        "//data:test_data",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/iceberg_to_sql",
        "@com_googletest//:gtest",
    ],
    alwayslink = True,
)
