load("@local_bazel_buildframe//:copts.bzl", "GLOBAL_DEFAULT_COPTS")
load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//visibility:private"],
)

cc_library(
    name = "leetcode_linked_list",
    srcs = glob([
        "*.cc",
        "*.h",
    ]),
    hdrs = glob([
        "*.h",
    ]),
    copts = GLOBAL_DEFAULT_COPTS,
    includes = [
        ".",
    ],
    linkopts = [],
    visibility = ["//src/leetcode_train:__subpackages__"],
    deps = [
        "//src/include:inner_include",
        "//src/leetcode_train/leetcode_util",
    ],
)
